--- a/index.html
+++ b/index.html
@@ -6,23 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/img/icons/pikachu.png">
     <title>Pokemon</title>
-
     <script src="assets/scripts/fetch.js" defer></script>
     <script src="assets/scripts/script.js" defer></script>
     <script src="assets/scripts/template.js" defer></script>
-
     <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="assets/styles/fonts.css">
     <link rel="stylesheet" href="assets/styles/bg_types.css">
+    <link rel="stylesheet" href="assets/styles/responsive.css">
 </head>
 
 <body onload="fetchs()">
     <div id="content_loading" class="content_loading">
         <img src="assets/img/loading.gif" alt="Loading">
     </div>
-    <header>
-        
-    </header>
     <div id="div_body" class="div_body display_none">
         <main>
             <div class="content_left">
@@ -35,12 +31,35 @@
                 <div class="div_right">
                     <div id="content_right" class="content_right"></div>
                     <div class="search">
-                        <input type="text" class="search_input" id="search_input">
+                        <input type="search" class="search_input" id="search_input">
                         <button onclick="searchInPokemonList()">Suchen</button>
+                    </div>
+                    <div class="filter">
+                        <select onchange="filterRender()" id="filter" name="filter">
+                            <option value="all">Filter: Bitte wähle einen Typ aus</option>
+                            <option value="Normal">Normal</option>
+                            <option value="Feuer">Feuer🔥</option>
+                            <option value="Wasser">Wasser💧</option>
+                            <option value="Pflanze">Pflanze🌿</option>
+                            <option value="Elektro">Elektro⚡</option>
+                            <option value="Eis">Eis❄️</option>
+                            <option value="Kampf">Kampf🥊</option>
+                            <option value="Gift">Gift☠️</option>
+                            <option value="Boden">Boden🌍</option>
+                            <option value="Flug">Flug🕊️</option>
+                            <option value="Psycho">Psycho🔮</option>
+                            <option value="Käfer">Käfer🐞</option>
+                            <option value="Gestein">Gestein🪨</option>
+                            <option value="Geist">Geist👻</option>
+                            <option value="Drache">Drache🐉</option>
+                            <option value="Stahl">Stahl🛡️</option>
+                            <option value="Fee">Fee✨</option>
+                        </select>
                     </div>
                 </div>
             </div>
         </main>
+        <div id="dialog" class="dialog_none dialog_none_mob"></div>
     </div>
 </body>
 
