Edit Btn Back & Next

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <div id="dialog" class="dialog_none dialog_none_mob"></div>
     </div>
     <footer id="footer" class="display_none">
-        <p>© Alle Rechte vorbehalten. Diese Website gehört und wird betrieben von Pokemon.</p>
+        <p>© Dies ist eine Übungswebsite.</p>
     </footer>
 </body>
+
 </html>
